# visualizer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: gifify.sh
packaging/: PKGBUILD  io.github.eboye.visualizer.desktop  io.github.eboye.visualizer.metainfo.xml  io.github.eboye.visualizer.yml
src/: audio.rs  config.rs  dsp.rs  main.rs  nowplaying.rs  render.rs
src/shaders/: fullscreen.wgsl  post.wgsl  terrain.wgsl
