[package]
name = "visualizer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fullscreen Linux/PipeWire audio visualizer in Rust — 3D wireframe terrain & globe with HDR bloom (wgpu)"
repository = "https://github.com/eboye/visualizer"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = "0.33.1"
glyphon = "0.11.0"
mpris = "2.1.0"
pipewire = "0.10.0"
pollster = "0.4.0"
ringbuf = "0.5.0"
rustfft = "6.4.1"
wgpu = "29.0.3"
winit = "0.30.13"
